--- a/ProyectoBases2/src/proyectobases2/Producto.form
+++ b/ProyectoBases2/src/proyectobases2/Producto.form
@@ -135,7 +135,7 @@
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="0" type="rgb"/>
+              <Color blue="33" green="66" red="0" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Agregar al Carrito"/>
           </Properties>
