--- a/ProyectoBases2/src/proyectobases2/ReportesGerente.form
+++ b/ProyectoBases2/src/proyectobases2/ReportesGerente.form
@@ -107,7 +107,7 @@
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="0" green="33" red="ff" type="rgb"/>
+          <Color blue="0" green="0" red="99" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Salir"/>
       </Properties>
